--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -71,7 +71,7 @@
 @media (width >= 80em) {
   
   .btn-sm {
-    padding: 0.75rem 1.5rem;
+    padding: .75rem 1.5rem;
     font-size: var(--fs-base);
   }
   .btn-md {
