--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,55 +1,49 @@
-#hero{
-    text-align: center;
+#hero {
+  text-align: center;
 
-& img[src*="music"] {  
+  & img[src*='music'] {
     width: 12.875rem;
-    height: auto;
-    max-width: 100%;
-    margin: 0 auto;
+  }
 
-}
-
-& h1{
+  & h1 {
     margin-top: 1rem;
-}
+  }
 
-   & p{
-        font:var(--fw-md) var(--fs-lg)/1.4 var(--ff-sans);
-        color:var(--text-color-secondary);
-        margin-top: .5rem;
-    }
+  & p {
+    font: var(--fw-md) var(--fs-lg) / 1.4 var(--ff-sans);
+    color: var(--text-color-secondary);
+    margin-top: 0.5rem;
+  }
 
-
-
-   & .buttons{
-        justify-content: center;
-        margin-top: 2rem;
-    }
-
+  & .buttons {
+    justify-content: center;
+    margin-top: 2rem;
+  }
 }
 
 @media (width >= 80em) {
-    #hero{
-        background: url(../assets/bg-hero-desktop.svg) no-repeat bottom
-      center/contain;
+  #hero {
+    background-image: url(../assets/vg-hero-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: 1280px 700px;
     padding-bottom: 15rem;
 
-
-        & img[src*="music"] {  
-            width: 25.75rem;
-        }
-        & h1{
-           margin-top: 1.5rem;
-        }
-
-        & p{
-            margin-top: 1rem;
-            font-size: 2.5rem;
-        }
-
-        .buttons{
-            margin-top: 3rem;
-        }
-
+    & img[src*='music'] {
+      width: 25.75rem;
     }
+
+    & h1 {
+      margin-top: 1.5rem;
+    }
+
+    & p {
+      margin-top: 1rem;
+      font-size: 2.5rem;
+    }
+
+    .buttons {
+      margin-top: 3rem;
+    }
+  }
 }
