--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,4 @@
+
 *,
 *::before,
 *::after {
@@ -48,6 +49,8 @@ html {
   color: var(--text-color-primary);
 
   overflow-x: hidden;
+
+  scroll-behavior: smooth;
 }
 
 body {
@@ -79,6 +82,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
 a:hover {
   background: linear-gradient(
     90deg,
@@ -91,9 +95,13 @@ a:hover {
   color: transparent;
 }
 
-
 ul[role='list'] {
   list-style: none;
+}
+
+img {
+  max-width: 100%;
+  display: inline-block;
 }
 
 @media (width >= 80em) {
