`Atualização de estilos e imagens para consistência e precisão`
Atualização de estilos e imagens para consistência e precisão

Refina os estilos CSS para aprimorar o layout e o alinhamento entre os componentes.

Substitui fontes de imagem para botões da App Store para garantir precisão.

Melhora a consistência visual ajustando as dimensões da imagem e as propriedades do plano de fundo.

Signed-off-by: Clayton Felipe dos Santos <claytonsantos.fs@outlook.com.br>

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,8 +1,10 @@
 #hero {
+  
   text-align: center;
 
   & img[src*='music'] {
-    width: 12.875rem;
+    width: 412px;
+    height: auto;
   }
 
   & h1 {
@@ -24,11 +26,10 @@
 @media (width >= 80em) {
   #hero {
     background: url(/assets/icons/desktop.svg);
-
     background-repeat: no-repeat;
     background-position: center bottom;
-    background-size: 1280px 720px;
-    padding-bottom: 1.5rem;
+    background-size: 1280px 300px;
+    padding-bottom: 2%;
 
     & img[src*='music'] {
       width: 25.75rem;
